Bug 461837 - /me output has unexpected newline
Summary: /me output has unexpected newline
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-14 20:05 UTC by Jan Bidler
Modified: 2022-11-28 18:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-11-14 20:05:59 UTC
SUMMARY
When sending a /me message, the output has an unexpected newline


STEPS TO REPRODUCE
1. send "/me writes bug"

OBSERVED RESULT
```
* Username
writes bug
```

EXPECTED RESULT
```
* Username writes bug
```

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7
Kernel Version: 6.0.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 1600 Six-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: AMD Radeon RX 570 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B450M DS3H
Comment 1 Bug Janitor Service 2022-11-17 19:35:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/632
Comment 2 Bug Janitor Service 2022-11-18 18:08:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/642
Comment 3 James Graham 2022-11-21 18:43:35 UTC
Git commit 42d728ac4b5d5a4523ea83ff9a1c0bace926fdd4 by James Graham.
Committed on 21/11/2022 at 18:43.
Pushed by nvrwhere into branch 'master'.

Fix /me giving extra newline

Make sure that the emote name is added inside the first paragraph rather than as an additional one.

Note alternate to network/neochat!632 because I didn'y realise @tfella had done a patch

M  +17   -6    src/neochatroom.cpp
M  +1    -1    src/qml/Component/Timeline/RichLabel.qml

https://invent.kde.org/network/neochat/commit/42d728ac4b5d5a4523ea83ff9a1c0bace926fdd4
Comment 4 Tobias Fella 2022-11-28 18:36:53 UTC
Git commit f3d7fbc483507e4bdde7b1f3ffc8d5937fd1820e by Tobias Fella.
Committed on 28/11/2022 at 18:31.
Pushed by tfella into branch 'master'.

Don't convert emotes to HTML

M  +4    -0    src/actionshandler.cpp

https://invent.kde.org/network/neochat/commit/f3d7fbc483507e4bdde7b1f3ffc8d5937fd1820e