Don't convert emotes to HTML

BUG: 461837